base: Add minimal support for Richtap vibrations
This implementation of Richtap is highly inspired by Nothings but stripped down to its essentials to match our needs.

If your device supports Richtap vibrations set "config_usesRichtapVibration" to true and enjoy!

Change-Id: I4f8b5deb7b303a3adf388335aa1ee8b1e048af24
Co-Authored-By: Chris Crump <chriscrawford893@gmail.com>
Co-Authored-By: Jake Weinstein <jake@aospa.co>
Co-Authored-By: UP5468-GE-ES44AC <2509942930@qq.com>
Co-Authored-By: Anay Wadhera <anay@aospa.co>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -7112,4 +7112,7 @@
     <!-- Whether to show GAIA education screen during account login of private space setup.
          OEM/Partner can explicitly opt to disable the screen. -->
     <bool name="config_enableGaiaEducationInPrivateSpace">true</bool>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
 </resources>
