--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -5565,4 +5565,6 @@
   <java-symbol type="drawable" name="ic_zen_mode_type_theater" />
   <java-symbol type="drawable" name="ic_zen_mode_type_unknown" />
 
+    <!-- Whether to use Richtap vibration -->
+    <java-symbol type="bool" name="config_usesRichtapVibration" />
 </resources>
